# sandboxer

./: Caddyfile.dev  Caddyfile.prod.in  Dockerfile  LICENSE  README.md  container_engine.py  inside_server.py  login.html  poc.py  prod_server.py  pyproject.toml  sandbox_manager.py  sandbox_server.py  sandboxer.py  sbxcli.py  test_container_engine.py  ui.html
.github/workflows/: build-and-release.yml
sandboxer/: container_engine.py  sandbox_manager.py
sandboxer_server/: container_engine.py  quota_manager.py  sandbox_manager.py  subordinate_manager.py
sdk/: test.js  test_async.py  test_sync.py
sdk/js/: README.md  index.ts  package.json  tsconfig.json
sdk/python/: pyproject.toml
sdk/python/src/sandboxer/: __init__.py
static/: login.html  ui.html
tests/: test_container_engine.py  test_container_engine_interactive.py
