[project]
name = "sandboxer"
version = "0.1.0"
description = "Code sandboxing made easy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "docker>=7.1.0",
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
    "ipykernel>=6.29.5",
    "itsdangerous>=2.2.0",
    "jupyter-client>=8.6.3",
    "matplotlib>=3.10.1",
    "python-dotenv>=1.0.1",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]
