[project]
name = "sandboxer"
version = "0.1.0"
description = "Code sandboxing made easy"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.115.11",
    "httpx>=0.28.1",
    "itsdangerous>=2.2.0",
    "python-dotenv>=1.0.1",
    "python-ulid>=3.0.0",
    "uvicorn>=0.34.0",
    "websockets>=15.0.1",
]

[dependency-groups]
dev = [
    "pyinstaller>=6.12.0",
]

[tool.uv.workspace]
members = ["sdk/python"]
