[project]
name = "sandboxer-sdk"
version = "0.1.0"
description = "Python bindings for Sandboxer"
readme = "README.md"
authors = [
    { name = "Amir Malik", email = "amir@amirmalik.net" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/sandboxer"]
